log
Sat 23 Mar 2024 11:54:45 PM UTC: 
 exercises.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:91:18: error: expected expression before ‘List’
   91 |       popCurrent(List *L);
      |                  ^~~~
Compilation failed
da37d34
Sat 23 Mar 2024 11:55:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:91:18: error: passing argument 1 of ‘popCurrent’ makes pointer from integer without a cast [-Werror=int-conversion]
   91 |       popCurrent(*dato);
      |                  ^~~~~
      |                  |
      |                  int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:32:24: note: expected ‘List *’ but argument is of type ‘int’
   32 | void *popCurrent(List *L);
      |                  ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
6e02e19
Sat 23 Mar 2024 11:56:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
2dca87c
Sun 24 Mar 2024 01:21:42 AM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  3|2
total_score: 40/70
47cdd50
Sun 24 Mar 2024 01:22:01 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
c4dc3f9
Sun 24 Mar 2024 01:22:45 AM UTC: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  3|2
total_score: 40/70
61bcb54
Sun 24 Mar 2024 01:24:24 AM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘copia_pila’:
exercises.c:110:5: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
  110 |     pushBack(P2, dato);
      |     ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d53b177
Sun 24 Mar 2024 01:25:58 AM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:109:22: error: ‘L’ undeclared (first use in this function)
  109 |   dato = (int*)first(L);
      |                      ^
exercises.c:109:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4899e72
